<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/miriam_image_view"
        android:layout_width="@dimen/miriam_image_size"
        android:layout_height="@dimen/miriam_image_size"
        android:layout_marginTop="@dimen/layout_margin_top_24dp"
        android:contentDescription="@string/miriam_content_description"
        android:src="@drawable/miriam_png"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/miriam_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_top_8dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/miriam_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/miriam_image_view" />

    <TextView
        android:id="@+id/udacity_text_view"
        android:layout_width="@dimen/text_width_0sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin_start_16dp"
        android:layout_marginTop="@dimen/layout_margin_top_16dp"
        android:layout_marginEnd="@dimen/layout_margin_end_16dp"
        android:layout_marginBottom="@dimen/layout_margin_bottom_20dp"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:text="@string/credit_podcast"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/miriam_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>